--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "auto-reload-brunch": "^2.7.1",
     "babel-brunch": "^6.0.4",
     "babel-eslint": "^6.0.4",
+    "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "brunch": "^2.8.0",
     "eslint": "^2.10.2",
